--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <!-- daisy ui and tailwind -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- poppins fonts  -->
+    <!-- custom css -->
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body class="font-poppins">
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center text-white">
+      <section class="home min-h-screen flex flex-col justify-center  items-center">
+        <div class="flex flex-col items-center gap-10">
+            <h1 class="text-8xl font-anton uppercase ">ALPHABET CLASH</h1>
+        <p class="text-2xl mt-5">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+        <button class="btn bg-white text-black">Play Now</button>
+        </div>
+      </section>
+      <section class="play-ground"></section>
+      <section class="score"></section>
+    </main>
+  </body>
 </html>
