--- a/index.html
+++ b/index.html
@@ -16,16 +16,105 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body class="font-poppins">
-    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center text-white">
-      <section class="home min-h-screen flex flex-col justify-center  items-center">
+    <main
+      class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center text-white"
+    >
+      <!-- home screen -->
+      <section
+        class="home min-h-screen flex flex-col justify-center items-center">
         <div class="flex flex-col items-center gap-10">
-            <h1 class="text-8xl font-anton uppercase ">ALPHABET CLASH</h1>
-        <p class="text-2xl mt-5">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-        <button class="btn bg-white text-black">Play Now</button>
+          <h1 class="text-8xl font-anton  uppercase">ALPHABET CLASH</h1>
+          <p class="text-2xl mt-5">
+            Unleash Your Keyboard Kung Fu : Press “Enter” to Play
+          </p>
+          <button class="btn bg-white text-black">Play Now</button>
         </div>
       </section>
-      <section class="play-ground"></section>
-      <section class="score"></section>
+
+      <!-- playground start-->
+
+      <section class="play-ground hidden">
+        <div class="flex flex-col items-center gap-20 pt-20">
+          <!-- screen -->
+          <div
+            class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB2]"
+          >
+            <div class="flex justify-center">
+              <p class="bg-[#2F2941] px-6 pb-4 py-3 rounded-b-xl text-white">
+                Don't watch keyboard while playing...
+              </p>
+            </div>
+            <div class="flex justify-center items-center h-full">
+              <p class="text-black text-9xl font-bold">Y</p>
+            </div>
+          </div>
+          <!-- keyboard start-->
+          <div>
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd class="kbd">q</kbd>
+              <kbd class="kbd">w</kbd>
+              <kbd class="kbd">e</kbd>
+              <kbd class="kbd">r</kbd>
+              <kbd class="kbd">t</kbd>
+              <kbd class="kbd">y</kbd>
+              <kbd class="kbd">u</kbd>
+              <kbd class="kbd">i</kbd>
+              <kbd class="kbd">o</kbd>
+              <kbd class="kbd">p</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd class="kbd">a</kbd>
+              <kbd class="kbd">s</kbd>
+              <kbd class="kbd">d</kbd>
+              <kbd class="kbd">f</kbd>
+              <kbd class="kbd">g</kbd>
+              <kbd class="kbd">h</kbd>
+              <kbd class="kbd">j</kbd>
+              <kbd class="kbd">k</kbd>
+              <kbd class="kbd">l</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd class="kbd">z</kbd>
+              <kbd class="kbd">x</kbd>
+              <kbd class="kbd">c</kbd>
+              <kbd class="kbd">v</kbd>
+              <kbd class="kbd">b</kbd>
+              <kbd class="kbd">n</kbd>
+              <kbd class="kbd">m</kbd>
+              <kbd class="kbd">/</kbd>
+            </div>
+          </div>
+          <!-- keyboard end -->
+          <!--life score -->
+          <div class="flex justify-between w-3/4">
+            <button
+              class="btn text-white border-0 rounded-full bg-[#894189] px-4"
+            >
+              Life
+              <img src="images/Group 23.svg" alt="" />
+              <span>1</span>
+            </button>
+            <button
+              class="btn text-white bg-[#360490] border-0 rounded-full px-4"
+            >
+              Score
+              <img src="images/monetization_on.svg" alt="" />
+              <span>1</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- playground end -->
+      <section class=" score flex  justify-center items-center min-h-screen hidden">
+        <div class="text-white text-center space-y-10 bg-[#FFFFFF33] p-4 rounded-2xl">
+          <h1 class="text-8xl">
+            <span class="font-extrabold"> Score:</span>
+            <span>14</span>
+          </h1>
+          <button class=" text-2xl bg-white text-[#010313] text-center px-8 py-4 rounded-lg">Play again</button>
+          <p>Practice will make you Pro</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
