--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             >
               Life
               <img src="images/Group 23.svg" alt="" />
-              <span>1</span>
+              <span id="life-score">10</span>
             </button>
             <button
               class="btn text-white bg-[#360490] border-0 rounded-full px-4"
             >
               Score
               <img src="images/monetization_on.svg" alt="" />
-              <span>1</span>
+              <span id="current-score">0</span>
             </button>
           </div>
         </div>
