--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         </div>
       </section>
       <!-- playground end -->
-      <section class=" score flex  justify-center items-center min-h-screen hidden">
+      <section id="score" class="  flex  justify-center items-center min-h-screen hidden">
         <div class="text-white text-center space-y-10 bg-[#FFFFFF33] p-4 rounded-2xl">
           <h1 class="text-8xl">
             <span class="font-extrabold"> Score:</span>
-            <span>14</span>
+            <span id="final-score">14</span>
           </h1>
-          <button class=" text-2xl bg-white text-[#010313] text-center px-8 py-4 rounded-lg">Play again</button>
+          <button onclick="play()" class=" text-2xl bg-white text-[#010313] text-center px-8 py-4 rounded-lg">Play again</button>
           <p>Practice will make you Pro</p>
         </div>
       </section>
